@@ -410,6 +410,14 @@ productivity=Productivity
 pollution=Pollution
 quality=Quality
 
+# Defaults panel
+defaults_open=Defaults >
+defaults_close=Defaults <
+save_as_default=Save as default
+save_as_default_tt=Save the current __1__ as the default for its category.
+save_for_all=Save for all categories
+save_for_all_tt=Save the current __1__ as the default for all categories it appears in.
+
 # Messages
 error_no_relevant_recipe=No existing recipe produces this item
 error_no_enabled_recipe=No enabled recipe produce this item (enable in preferences →)
